feat: 文件分类管理支持bgm素材
